--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
 <img src="https://tvplaneta.ru/forum/uploads/gallery/album_1978/gallery_2_1978_29000.jpg">
 </div>
 <p>Это памятник архитектуры и истории расположенный на 40-метровой отвесной Аврориной скале на мысе Ай-Тодор в поселке Гаспра на южном берегу крыма. До Ласточкиного гнезда ходят экскурсионные теплоходы там можно послушать историю этого здания</p>
-	<a href="file:///C:/Users/andre/OneDrive/%D0%A0%D0%B0%D0%B1%D0%BE%D1%87%D0%B8%D0%B9%20%D1%81%D1%82%D0%BE%D0%BB/%D1%81%D0%B0%D0%B9%D1%82/yalta.html">Назад</a>
+	<a href="https://mxmknn.github.io/ipetri.club/">Назад</a>
 </body>
 </html>
